<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SelectionsFragment"
    android:visibility="invisible"
    tools:visibility="visible"
    android:background="@drawable/selections_background"
    android:id="@+id/selections_fragment_root"
    >



</FrameLayout>